--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -4,7 +4,7 @@
         <strong>Administrator</strong> - U: admin P: admin
     </div>
     <div class="card">
-        <h4 class="card-header">Angular 8 Role Based Auth Example</h4>
+        <h4 class="card-header">Welcome</h4>
         <div class="card-body">
             <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
                 <div class="form-group">
