--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -33,7 +33,7 @@
         [ngClass]="{ user_error_content: submitted && f.password.errors }"
       >
         <input type="checkbox" class="role_enable_field" id="checkbox1" />
-        <label for="checkbox1" class="role_text_field">系统管理员</label>
+        <label for="checkbox1" class="role_text_field">管理员身份</label>
       </div>
       <div class="login_submit_content">
         <button class="submit_btn" [disabled]="loading">
