--- a/src/assets/css/login.css
+++ b/src/assets/css/login.css
@@ -1,7 +1,7 @@
 .main_top {
   width: 100%;
   position: relative;
-  height: 20%;
+  height: 25%;
 }
 
 .main_top_logo {
@@ -15,7 +15,7 @@
 
 .main_content {
   width: 100%;
-  height: 80%;
+  height: 75%;
   position: relative;
   background: url("../images/login-left.svg");
   background-size: 813px 405px;
@@ -35,6 +35,7 @@
 .login_product_text {
   font-size: 30px;
   color: #434343;
+  font-weight: normal;
 }
 
 .user_name_content {
@@ -57,7 +58,7 @@
 
 .role_text_field {
   font-size: 14px;
-  color: #000000;
+  color: #666;
   margin-left: 5px;
   vertical-align: text-top;
 }
@@ -91,14 +92,14 @@
 }
 
 .user_error_content {
-  margin-top: 20px !important;
+  margin-top: 30px !important;
 }
 
 .error_content {
   width: 300px;
-  text-align: center;
-  margin-top: 10px;
-  color: #f21414;
+  text-align: left;
+  margin-top: 15px;
+  color: #666;
 }
 
 .login_submit_content {
