--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,3 @@
-﻿<nav class="navbar navbar-expand navbar-dark bg-dark" *ngIf="currentUser">
-  <div class="navbar-nav">
-    <a class="nav-item nav-link" routerLink="/">Home</a>
-    <a class="nav-item nav-link" routerLink="/admin" *ngIf="isAdmin">Admin</a>
-    <a class="nav-item nav-link" (click)="logout()">Logout</a>
-  </div>
-</nav>
-
-<div class="main-container">
+﻿<div class="main-container">
   <router-outlet></router-outlet>
 </div>
