--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,3 @@
 @import url("./assets/css/main.css");
 @import url("./assets/css/login.css");
-@import url("./assets/css/dashbord.css");
+@import url("./assets/css/home.css");
