--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -8,10 +8,10 @@
   <div class="nav">
     <ul>
       <li>
-        <a class="start">开始运算</a>
+        <a class="start" (click)="calc()">开始运算</a>
       </li>
       <li>
-        <a class="setting">系统配置</a>
+        <a class="setting" (click)="config()">系统配置</a>
       </li>
       <li>
         <a (click)="logout()">用户注销</a>
