--- a/src/assets/css/home.css
+++ b/src/assets/css/home.css
@@ -45,7 +45,7 @@
 
 .nav li {
   float: left;
-  width: 150px;
+  width: 90px;
   height: 30px;
   line-height: 30px;
 }
@@ -55,6 +55,7 @@
   text-decoration: none;
   text-align: center;
   color: #fff;
+  float: right;
 }
 
 .top_menu_logo {
@@ -85,20 +86,18 @@
   right: 150px;
 }
 
-
-
-.retention-chart{
+.retention-chart {
   margin-bottom: 20px;
 }
+
 .turnover-chart-card {
-  margin-top: 40px;
+  margin-top: 70px;
 
   /* background: #442194; */
   padding: 0 0px;
 }
 
 .turnover-pie-left {
-
   margin-right: 10px;
   width: calc(50% - 5px);
   float: left;
@@ -110,8 +109,8 @@
 }
 
 .single-chart-card {
-  background: #FFFFFF;
-  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.20);
+  background: #ffffff;
+  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.2);
   border-radius: 4px;
   border-radius: 4px;
 }
@@ -133,6 +132,6 @@
   margin-left: 200px;
   height: 800px;
 }
-.rank-list-bar-chart{
+.rank-list-bar-chart {
   height: 800px;
 }
