--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -23,7 +23,7 @@
     <div class="turnover-chart-card">
       <!-- UV/PV访问趋势 -->
       <div class="retention-chart single-chart-card">
-        <div echarts [options]="retentionOption" class="chart"></div>
+        <div echarts [options]="accessOption" class="chart"></div>
       </div>
       <!-- pv构成情况 -->
       <div class="retention-chart single-chart-card">
@@ -43,7 +43,7 @@
       <div class="clear"></div>
       <!-- 排行榜 -->
       <div class="rank-bar single-chart-card">
-        <div>排行榜-TOP20</div>
+        <div class="rank-bar-title">排行榜-TOP20</div>
         <div class="rank-list">
           <div><span>华为mateXS</span></div>
           <div><span>华为mateXS</span></div>
