--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -15,7 +15,7 @@
         <a (click)="init()" class="start">开始运算</a>
       </li>
       <li>
-        <a (click)="logout()">注销</a>
+        <a (click)="logout()">用户注销</a>
       </li>
     </ul>
   </div>
