--- a/src/assets/css/home.css
+++ b/src/assets/css/home.css
@@ -45,7 +45,7 @@
 
 .nav li {
   float: left;
-  width: 90px;
+  width: 105px;
   height: 30px;
   line-height: 30px;
 }
@@ -55,6 +55,7 @@
   text-decoration: none;
   text-align: center;
   color: #fff;
+  float: right;
 }
 
 .top_menu_logo {
@@ -84,19 +85,17 @@
   top: 50px;
   right: 150px;
 }
-.retention-chart{
+
+.retention-chart {
   margin-bottom: 20px;
 }
 
 .turnover-chart-card {
   margin-top: 40px;
-
-  /* background: #442194; */
   padding: 0 0px;
 }
 
 .turnover-pie-left {
-
   margin-right: 10px;
   width: calc(50% - 5px);
   float: left;
@@ -108,10 +107,14 @@
 }
 
 .single-chart-card {
-  background: #FFFFFF;
-  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.20);
+  background: #ffffff;
+  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.2);
   border-radius: 4px;
   border-radius: 4px;
+}
+
+.content {
+  padding-top: 50px;
 }
 
 .clear {
@@ -132,19 +135,19 @@
   margin-left: 300px;
   height: 800px;
 }
-.rank-list-bar-chart{
+.rank-list-bar-chart {
   height: 800px;
 }
-.rank-bar-title{
+.rank-bar-title {
   padding-top: 67px;
   padding-left: 100px;
   padding-right: 100px;
   font-size: 20px;
-  color: rgba(0,0,0,0.85);
+  color: rgba(0, 0, 0, 0.85);
   letter-spacing: -0.25px;
   line-height: 16px;
 }
-.rank-list{
+.rank-list {
   margin-top: 50px;
   padding-left: 100px;
   font-size: 18px;
