--- a/src/assets/css/home.css
+++ b/src/assets/css/home.css
@@ -135,9 +135,11 @@
   margin-left: 300px;
   height: 800px;
 }
+
 .rank-list-bar-chart {
   height: 800px;
 }
+
 .rank-bar-title {
   padding-top: 67px;
   padding-left: 100px;
@@ -146,7 +148,9 @@
   color: rgba(0, 0, 0, 0.85);
   letter-spacing: -0.25px;
   line-height: 16px;
+  font-weight: bold;
 }
+
 .rank-list {
   margin-top: 50px;
   padding-left: 100px;
