--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -45,10 +45,26 @@
       <div class="rank-bar single-chart-card">
         <div class="rank-bar-title">排行榜-TOP20</div>
         <div class="rank-list">
-          <div><span>华为mateXS</span></div>
-          <div><span>华为mateXS</span></div>
-          <div><span>华为mateXS</span></div>
-          <div><span>华为mateXS</span></div>
+          <div><span class="rank-list-top3-num">1</span><span class="rank-list-top3-font">华为mateXS</span></div>
+          <div><span class="rank-list-top3-num">2</span><span class="rank-list-top3-font">华为mateXS</span></div>
+          <div><span class="rank-list-top3-num">3</span><span class="rank-list-top3-font">华为mateXS</span></div>
+          <div><span class="rank-list-normal-num">4</span><span class="rank-list-top3-font">华为mateXS</span></div>
+          <div><span class="rank-list-normal-num">5</span><span class="rank-list-top3-font">华为mateXS</span></div>
+          <div><span class="rank-list-normal-num">6</span><span class="rank-list-top3-font">华为mateXS</span></div>
+          <div><span class="rank-list-normal-num">7</span><span class="rank-list-top3-font">华为mateXS</span></div>
+          <div><span class="rank-list-normal-num">8</span><span class="rank-list-top3-font">华为mateXS</span></div>
+          <div><span class="rank-list-normal-num">9</span><span class="rank-list-top3-font">华为mateXS</span></div>
+          <div><span class="rank-list-normal-num">10</span><span class="rank-list-top3-font">华为mateXS</span></div>
+          <div><span class="rank-list-normal-num">11</span><span class="rank-list-top3-font">华为mateXS</span></div>
+          <div><span class="rank-list-normal-num">12</span><span class="rank-list-top3-font">华为mateXS</span></div>
+          <div><span class="rank-list-normal-num">13</span><span class="rank-list-top3-font">华为mateXS</span></div>
+          <div><span class="rank-list-normal-num">14</span><span class="rank-list-top3-font">华为mateXS</span></div>
+          <div><span class="rank-list-normal-num">15</span><span class="rank-list-top3-font">华为mateXS</span></div>
+          <div><span class="rank-list-normal-num">16</span><span class="rank-list-top3-font">华为mateXS</span></div>
+          <div><span class="rank-list-normal-num">17</span><span class="rank-list-top3-font">华为mateXS</span></div>
+          <div><span class="rank-list-normal-num">18</span><span class="rank-list-top3-font">华为mateXS</span></div>
+          <div><span class="rank-list-normal-num">19</span><span class="rank-list-top3-font">华为mateXS</span></div>
+          <div><span class="rank-list-normal-num">20</span><span class="rank-list-top3-font">华为mateXS</span></div>
         </div>
         <div class="rank-list-bar">
           <div echarts [options]="rankOption" class="rank-list-bar-chart"></div>
