--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
-﻿<div class="main-container">
+﻿<div [ngClass]="{ 'main-container': !isHome, 'home-container': isHome }">
   <router-outlet></router-outlet>
 </div>
